Add spotify to i3blocks

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -40,6 +40,12 @@
 separator=false
 markup=pango
 
+# Spotify icon \uF1BC
+[spotify]
+label=
+command=~/.config/i3/scripts/spotify.py
+color=#ffffff
+interval=5
 
 # Memory usage
 #
@@ -47,13 +53,13 @@ markup=pango
 [memory]
 label= 
 command=~/.config/i3/scripts/memory
-interval=2
+interval=30
 
 [cpu_usage]
 label= 
 command=~/.config/i3/scripts/cpu_usage
 #min_width=CPU: 100.00%
-interval=2
+interval=30
 
 [CPU-temperature]
 label=
