Use i3lock-fancy as lockscreen

--- a/i3/config
+++ b/i3/config
@@ -269,9 +269,13 @@ assign [class="jetbrains-pycharm-ce"] $ws2
 assign [class="(?i)firefox"] $ws3
 assign [class="Slack"] $ws4
 assign [class="zoom"] $ws6
+assign [class="Lens"] $ws7
 
 for_window [class="Spotify"] move --no-auto-back-and-forth container to workspace $ws5
 
+for_window [workspace=$ws2] layout tabbed
+for_window [workspace=$ws3] layout tabbed
+for_window [workspace=$ws6] layout tabbed
 
 
 # automatic set focus new window if it opens on another workspace then the current:
