--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -1,9 +1,9 @@
 [Settings]
-gtk-theme-name=Orchis-dark
-gtk-icon-theme-name=Material-Black-Cherry-Numix
-gtk-font-name=Product Sans 12
-gtk-cursor-theme-name=capitaine-cursors-light
-gtk-cursor-theme-size=0
+gtk-theme-name=Arc-Dark
+gtk-icon-theme-name=Paper
+gtk-font-name=Noto Sans 11
+gtk-cursor-theme-name=Paper
+gtk-cursor-theme-size=16
 gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-button-images=0
