--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -37,7 +37,10 @@
 # Global properties
 #
 # The top properties below are applied to every block, but can be overridden.
+full_text=|
+align=center
 separator=false
+separator_block_width=7
 markup=pango
 
 # Spotify icon \uF1BC
@@ -47,27 +50,39 @@ command=~/.config/i3/scripts/spotify.py
 color=#ffffff
 interval=5
 
+[separator]
+color=#ff7f7f
+
 # Memory usage
 #
 # The type defaults to "mem" if the instance is not specified.
 [memory]
 label= 
 command=~/.config/i3/scripts/memory
+color=#ffffff
 interval=15
+
+[separator]
+color=#ff7f7f
 
 [cpu_usage]
 label= 
 command=~/.config/i3/scripts/cpu_usage
-#min_width=CPU: 100.00%
+color=#ffffff
 interval=15
 
 [CPU-temperature]
-label=
+label=@ 
 command=~/.config/i3/scripts/temperature
+color=#ffffff
 interval=15
+
+[separator]
+color=#ff7f7f
 
 [pavucontrol]
 full_text=
+color=#ffffff
 command=pavucontrol
 
 [volume-pulseaudio]
@@ -75,8 +90,12 @@ command=~/.config/i3/scripts/volume
 instance=Master
 interval=1
 
+[separator]
+color=#ff7f7f
+
 [time]
 label= 
 command=date '+%a %d %b %H:%M:%S '
+color=#7f7fff
 interval=1
 
