--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -57,7 +57,7 @@ color=#ff7f7f
 #
 # The type defaults to "mem" if the instance is not specified.
 [memory]
-label= 
+label= 
 command=~/.config/i3/scripts/memory
 color=#ffffff
 interval=15
