--- a/i3/config
+++ b/i3/config
@@ -269,6 +269,7 @@ assign [class="jetbrains-pycharm-ce"] $ws2
 assign [class="(?i)firefox"] $ws3
 assign [class="Slack"] $ws4
 assign [class="Signal"] $ws4
+assign [class="discord"] $ws4
 assign [class="zoom"] $ws6
 assign [class="Lens"] $ws7
 
