--- a/i3/config
+++ b/i3/config
@@ -249,7 +249,7 @@ set $ws2 "2:"
 set $ws3 "3:"
 set $ws4 "4:"
 set $ws5 "5:"
-set $ws6 "6:"
+set $ws6 "6:"
 set $ws7 "7:☸"
 set $ws8 "8:*"
 set $ws9 "9:**"
@@ -272,6 +272,7 @@ assign [class="Signal"] $ws4
 assign [class="discord"] $ws4
 assign [class="zoom"] $ws6
 assign [class="Lens"] $ws7
+assign [class="(?i)Nautilus"] $ws8
 
 for_window [class="Spotify"] move --no-auto-back-and-forth container to workspace $ws5
 
