--- a/i3/config
+++ b/i3/config
@@ -266,6 +266,7 @@ set $ws9 "9:**"
 # bind program to workspace and focus to them on startup:
 assign [class="Xfce4-terminal"] $ws1
 assign [class="jetbrains-pycharm-ce"] $ws2
+assign [class="VSCodium"] $ws2
 assign [class="(?i)firefox"] $ws3
 assign [class="Slack"] $ws4
 assign [class="Signal"] $ws4
@@ -383,7 +384,7 @@ client.urgent		    $urgentred	$urgentred	$white		$eos-red	$yellowbrown
 # Start i3bar to display a workspace bar 
 # (plus the system information i3status finds out, if available)
 bar {
-		font pango:JetBrains Mono Regular 10
+		font pango:JetBrains Mono Regular 12
 		status_command i3blocks -c ~/.config/i3/i3blocks.conf
 	    position top
 		tray_output primary
@@ -456,4 +457,3 @@ bindsym $mod+Tab exec rofi -show window -display-window "Window : " -line-paddin
 bindsym Print       exec flameshot full -p /home/a3l/Pictures/SS/
 bindsym Shift+Print exec flameshot gui -p /home/a3l/Pictures/SS/
 
-exec xrandr --dpi 120
