--- a/i3/config
+++ b/i3/config
@@ -265,8 +265,8 @@ set $ws9 "9:**"
 
 # bind program to workspace and focus to them on startup:
 assign [class="Xfce4-terminal"] $ws1
-assign [class="jetbrains-pycharm-ce"] $ws2
-assign [class="VSCodium"] $ws2
+assign [class="(?i)jetbrains(?i)"] $ws2
+assign [class="Code"] $ws2
 assign [class="(?i)firefox"] $ws3
 assign [class="Slack"] $ws4
 assign [class="Signal"] $ws4
