--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -81,7 +81,7 @@ interval=15
 color=#ff7f7f
 
 [pavucontrol]
-full_text=
+full_text=
 color=#ffffff
 command=pavucontrol
 
@@ -94,7 +94,6 @@ interval=1
 color=#ff7f7f
 
 [time]
-label= 
 command=date '+%a %d %b %H:%M:%S '
 color=#7f7fff
 interval=1
