--- a/i3/config
+++ b/i3/config
@@ -244,15 +244,15 @@ bindsym $mod+n exec /usr/bin/thunar
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1:"
-set $ws2 "2:"
-set $ws3 "3:"
-set $ws4 "4:"
-set $ws5 "5:"
-set $ws6 "6:"
-set $ws7 "7:☸"
-set $ws8 "8:*"
-set $ws9 "9:**"
+set $ws1 " 1  "
+set $ws2 " 2  "
+set $ws3 " 3  "
+set $ws4 " 4  "
+set $ws5 " 5  "
+set $ws6 " 6  "
+set $ws7 " 7 ☸ "
+set $ws8 " 8  "
+set $ws9 " 9 * "
 
 # use workspaces on different displays:
 # where you have to replace VGA-0/HDMI-0 with the names for your displays 
@@ -384,7 +384,7 @@ client.urgent		    $urgentred	$urgentred	$white		$eos-red	$yellowbrown
 # Start i3bar to display a workspace bar 
 # (plus the system information i3status finds out, if available)
 bar {
-		font pango:JetBrains Mono Regular 12
+		font pango:JetBrains Mono Regular 13
 		status_command i3blocks -c ~/.config/i3/i3blocks.conf
 	    position top
 		tray_output primary
