--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -51,7 +51,7 @@ color=#ffffff
 interval=5
 
 [separator]
-color=#ff7f7f
+color=#DCA3A3
 
 # Memory usage
 #
@@ -63,7 +63,7 @@ color=#ffffff
 interval=5
 
 [separator]
-color=#ff7f7f
+color=#DCA3A3
 
 [cpu_usage]
 label= 
@@ -78,7 +78,7 @@ color=#ffffff
 interval=15
 
 [separator]
-color=#ff7f7f
+color=#DCA3A3
 
 [pavucontrol]
 full_text=
@@ -91,10 +91,10 @@ instance=Master
 interval=1
 
 [separator]
-color=#ff7f7f
+color=#DCA3A3
 
 [time]
 command=date '+%a %d %b %H:%M:%S '
-color=#7f7fff
+color=#94BFF3
 interval=1
 
