--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -1,6 +1,6 @@
 [Settings]
-gtk-theme-name=Arc-Dark
-gtk-icon-theme-name=Paper
+gtk-theme-name=Pop-dark
+gtk-icon-theme-name=Pop
 gtk-font-name=Noto Sans 11
 gtk-cursor-theme-name=Paper
 gtk-cursor-theme-size=16
