--- a/i3/config
+++ b/i3/config
@@ -252,6 +252,7 @@ set $ws5 " 5  "
 set $ws6 " 6 ☸ "
 set $ws7 " 7  "
 set $ws8 " 8  "
+set $ws9 " 9 * "
 
 # use workspaces on different displays:
 # where you have to replace VGA-0/HDMI-0 with the names for your displays 
