--- a/i3/config
+++ b/i3/config
@@ -274,6 +274,7 @@ assign [class="discord"] $ws4
 assign [class="zoom"] $ws5
 assign [class="Lens"] $ws6
 assign [class="(?i)Nautilus"] $ws7
+assign [class="(?i)Thunar"] $ws7
 
 for_window [class="Spotify"] move --no-auto-back-and-forth container to workspace $ws8
 
@@ -458,5 +459,5 @@ bindsym $mod+Tab exec rofi -show window -display-window "Window : " -line-paddin
 
 
 bindsym Print       exec flameshot full -p /home/a3l/Pictures/SS/
-bindsym Shift+Print exec flameshot gui -p /home/a3l/Pictures/SS/
+bindsym Shift+Print exec flameshot gui
 
