--- a/i3/config
+++ b/i3/config
@@ -124,7 +124,7 @@ bindsym $mod+Shift+9    move container to workspace  $ws9
 ######################################
 
 # start a terminal
-bindsym $mod+Return exec xfce4-terminal
+bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+c kill
@@ -265,6 +265,7 @@ set $ws9 " 9 * "
 
 # bind program to workspace and focus to them on startup:
 assign [class="Xfce4-terminal"] $ws1
+assign [class="Alacritty"] $ws1
 assign [class="(?i)jetbrains(?i)"] $ws2
 assign [class="Code"] $ws2
 assign [class="(?i)firefox"] $ws3
