feat(m1): support m1 mac

--- a/alacritty.yml
+++ b/alacritty.yml
@@ -255,7 +255,7 @@ live_config_reload: true
 #     - --login
 #
 shell:
-  program: /usr/local/bin/tmux
+  program: /opt/homebrew/bin/tmux
   args:
     - new-session
     - -A
