--- a/alacritty.yml
+++ b/alacritty.yml
@@ -262,12 +262,10 @@ key_bindings:
   - { key: Delete,                  chars: "\x1b[3~"                     }
   - { key: Left,     mods: Shift,   chars: "\x1b[1;2D"                   }
   - { key: Left,     mods: Control, chars: "\x1b[1;5D"                   }
-  - { key: Left,     mods: Alt,     chars: "\x1b[1;3D"                   }
   - { key: Left,                    chars: "\x1b[D",   mode: ~AppCursor  }
   - { key: Left,                    chars: "\x1bOD",   mode: AppCursor   }
   - { key: Right,    mods: Shift,   chars: "\x1b[1;2C"                   }
   - { key: Right,    mods: Control, chars: "\x1b[1;5C"                   }
-  - { key: Right,    mods: Alt,     chars: "\x1b[1;3C"                   }
   - { key: Right,                   chars: "\x1b[C",   mode: ~AppCursor  }
   - { key: Right,                   chars: "\x1bOC",   mode: AppCursor   }
   - { key: Up,       mods: Shift,   chars: "\x1b[1;2A"                   }
@@ -328,6 +326,8 @@ key_bindings:
   - { key: F10,      mods: Alt,     chars: "\x1b[21;6~"                  }
   - { key: F11,      mods: Alt,     chars: "\x1b[23;6~"                  }
   - { key: F12,      mods: Alt,     chars: "\x1b[24;6~"                  }
+  - { key: Left,     mods: Alt,     chars: "\x1bb" }
+  - { key: Right,    mods: Alt,     chars: "\x1bf" }
   - { key: F1,       mods: Command, chars: "\x1b[1;3P"                   }
   - { key: F2,       mods: Command, chars: "\x1b[1;3Q"                   }
   - { key: F3,       mods: Command, chars: "\x1b[1;3R"                   }
@@ -360,7 +360,7 @@ key_bindings:
   - { key: Key7,     mods: Command,       chars: "\x06\x37" }
   - { key: Key8,     mods: Command,       chars: "\x06\x38" }
   - { key: Key9,     mods: Command,       chars: "\x06\x39" }
-  - { key: Left,     mods: Command,       chars: "\x06\x48" }
+  - { key: Left,     mods: Command,       chars: "\x1bb" }
   - { key: Down,     mods: Command,       chars: "\x06\x4a" }
   - { key: Up,       mods: Command,       chars: "\x06\x4b" }
-  - { key: Right,    mods: Command,       chars: "\x06\x4c" }
+  - { key: Right,    mods: Command,       chars: "\x1bf" }
