--- a/wezterm/colors/melange_light.toml
+++ b/wezterm/colors/melange_light.toml
@@ -26,4 +26,4 @@ brights = [
   "#3D6568",
   "#54433A"
 ]
-tab_bar = { background = "#D9D3CE", active_tab = { bg_color = "#54433A", fg_color = "#e0e0e0", intensity = "Bold" }}
+tab_bar = {background="#D9D3CE", active_tab={bg_color="#54433A", fg_color="#D9D3CE", intensity="Bold"}, inactive_tab={bg_color="#D9D3CE", fg_color="#54433A"}, new_tab={fg_color="#54433A", bg_color="#D9D3CE"}}
