--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@ insert_final_newline = true
 max_line_length = 100
 tab_width = 4
 
-[{*.bash,*.sh,*.zsh}]
+[{*.bash,*.sh,*.lua}]
 indent_size = 2
 tab_width = 2
 
