--- a/starship.toml
+++ b/starship.toml
@@ -11,79 +11,37 @@ $shlvl\
 $shell\
 $env_var\
 $jobs\
-# $sudo\
 $username\
 $character"""
 
 right_format = """
-$singularity\
 $kubernetes\
 $directory\
-$vcsh\
-$fossil_branch\
 $git_branch\
 $git_commit\
 $git_state\
 $git_status\
-$hg_branch\
-$pijul_channel\
 $docker_context\
 $package\
-$c\
-$cpp\
-$cmake\
-$cobol\
-$daml\
 $dart\
-$deno\
-$dotnet\
-$elixir\
-$elm\
-$erlang\
-$fennel\
-$fortran\
 $golang\
-$guix_shell\
-$haskell\
-$haxe\
 $helm\
 $java\
-$julia\
 $kotlin\
-$gradle\
 $lua\
-$nim\
 $nodejs\
-$ocaml\
-$opa\
-$perl\
-$php\
-$pulumi\
-$purescript\
 $python\
-$raku\
-$rlang\
-$red\
-$ruby\
 $rust\
-$scala\
-$solidity\
 $swift\
 $terraform\
-$vlang\
-$vagrant\
-$xmake\
 $zig\
 $buf\
 $conda\
-$pixi\
 $meson\
-$spack\
 $memory_usage\
 $aws\
 $gcloud\
 $openstack\
-$azure\
 $crystal\
 $custom\
 $status\
@@ -134,6 +92,7 @@ repo_root_format = '[$before_root_path]($before_repo_root_style)[$repo_root]($re
 
 [cmd_duration]
 format = "[◄ $duration ](italic white)"
+min_time = 10
 
 [jobs]
 format = "[$symbol$number]($style) "
@@ -202,10 +161,6 @@ staged = "[▪┤[$count](bold white)│](italic bright-cyan)"
 renamed = "[◎◦](italic bright-blue)"
 deleted = "[✕](italic red)"
 
-[deno]
-format = " [deno](italic) [∫ $version](green bold)"
-version_format = "${raw}"
-
 [lua]
 format = " [lua](italic) [${symbol}${version}]($style)"
 version_format = "${raw}"
@@ -224,12 +179,6 @@ format = " [py](italic) [${symbol}${version}]($style)"
 symbol = "[⌉](bold bright-blue)⌊ "
 version_format = "${raw}"
 style = "bold bright-yellow"
-
-[ruby]
-format = " [rb](italic) [${symbol}${version}]($style)"
-symbol = "◆ "
-version_format = "${raw}"
-style = "bold red"
 
 [rust]
 format = " [rs](italic) [$symbol$version]($style)"
@@ -259,21 +208,9 @@ symbol = "▲ "
 symbol = "■ "
 format = " [buf](italic) [$symbol $version $buf_version]($style)"
 
-[c]
-symbol = "ℂ "
-format = " [$symbol($version(-$name))]($style)"
-
-[cpp]
-symbol = "ℂ "
-format = " [$symbol($version(-$name))]($style)"
-
 [conda]
 symbol = "◯ "
 format = " conda [$symbol$environment]($style)"
-
-[pixi]
-symbol = "■ "
-format = " pixi [$symbol$version ($environment )]($style)"
 
 [dart]
 symbol = "◁◅ "
@@ -283,37 +220,17 @@ format = " dart [$symbol($version )]($style)"
 symbol = "◧ "
 format = " docker [$symbol$context]($style)"
 
-[elixir]
-symbol = "△ "
-format = " exs [$symbol $version OTP $otp_version ]($style)"
-
-[elm]
-symbol = "◩ "
-format = " elm [$symbol($version )]($style)"
-
 [golang]
 symbol = "∩ "
 format = " go [$symbol($version )]($style)"
-
-[haskell]
-symbol = "❯λ "
-format = " hs [$symbol($version )]($style)"
 
 [java]
 symbol = "∪ "
 format = " java [${symbol}(${version} )]($style)"
 
-[julia]
-symbol = "◎ "
-format = " jl [$symbol($version )]($style)"
-
 [memory_usage]
 symbol = "▪▫▪ "
 format = " mem [${ram}( ${swap})]($style)"
-
-[nim]
-symbol = "▴▲▴ "
-format = " nim [$symbol($version )]($style)"
 
 [nix_shell]
 style = 'bold italic dimmed blue'
@@ -322,8 +239,4 @@ format = '[$symbol nix⎪$state⎪]($style) [$name](italic dimmed white)'
 impure_msg = '[⌽](bold dimmed red)'
 pure_msg = '[⌾](bold dimmed green)'
 unknown_msg = '[◌](bold dimmed yellow)'
-
-[spack]
-symbol = "◇ "
-format = " spack [$symbol$environment]($style)"
 
